# eyl-irc

./: README.md
doc/rfc/: rfc1459.txt
src/: CMakeLists.txt  exit_code.c  exit_code.h  irc.c  irc.h  main.c  wayland.c  wayland.h
